# MongoProductionSystem

./: .env.example  .gitignore  README.md  alembic.ini  install_backend_watchdog.ps1  install_supervisor_firewall.ps1  launch_mongo_production.ps1  pyproject.toml  restart_backend.ps1  run_backend_watchdog.ps1
app/: __init__.py  __main__.py  autoschedule.py  cnc_linuxcnc.py  database.py  diagnostics.py  main.py  models.py  pallet_names.py  program_metadata.py  robot_dashboard.py  robot_files.py  robot_rtde.py  robot_scripts.py  robot_supervisor.py  robot_transport.py  schemas.py  service.py  settings.py
app/static/: app.js  dashboard.html  dashboard.js  debugging.html  debugging.js  index.html  mill-programs.html  mill-programs.js  robot-programs.html  robot-programs.js  settings.html  settings.js  styles.css  tools.html  tools.js
migrations/: env.py
migrations/versions/: 0001_pallet_scheduling.py  0002_pool_positions.py  0003_remove_storage_slots.py  0004_virtual_queue.py  0005_debug_simulator.py  0006_robot_rtde_settings.py  0007_debug_io_masks.py  0008_robot_connection_mode.py  0009_debug_io_labels.py  0010_manual_io_control_lockout.py  0011_debug_program_buttons.py  0012_robot_sftp_file_access.py  0013_default_ur_sftp_credentials.py  0014_robot_program_extensions.py  (+30 more)
tests/: conftest.py  test_app.py  test_autoschedule.py  test_cnc_linuxcnc.py  test_debug_simulator.py  test_diagnostics.py  test_pallets.py  test_programs.py  test_robot_dashboard.py  test_robot_motion.py  test_robot_rtde.py  test_robot_scripts.py  test_robot_supervisor.py  test_tools.py
