[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mongo-production-system"
version = "0.3.0"
description = "Pallet scheduling and machine coordination for Mongo and the mill."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15,<2",
    "fastapi>=0.115,<1",
    "paramiko>=3.5,<4",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy>=2.0,<3",
    "UrRtde @ git+https://github.com/UniversalRobots/RTDE_Python_Client_Library.git@v2.7.12",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
